# reviewloop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apple/ReviewLoopWidget/: README.md  project.yml
apple/ReviewLoopWidget/HostApp/: HostAppApp.swift
apple/ReviewLoopWidget/Widget/: Info.plist  Widget.entitlements  Widget.swift  WidgetBundle.swift  WidgetState.swift  WidgetTimelineProvider.swift  WidgetView.swift
docs/: widget-schema.md
scripts/: quality-gates.sh
src/: artifact.rs  config.rs  db.rs  email.rs  email_account.rs  fallback.rs  http.rs  lib.rs  logging.rs  main.rs  model.rs  notifier.rs  panel.rs  token.rs  trigger.rs  util.rs  widget_state.rs  worker.rs
src/backend/: mod.rs  stanford.rs
src/oauth/: google.rs  mod.rs
tests/: db_state.rs  git_trigger.rs  integration_mock_server.rs
tools/: paperreview_fallback.mjs  render_homebrew_formula.sh
