[package]
name = "reviewloop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.46", features = ["full"] }
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
imap = "2.4"
native-tls = "0.2"

[dev-dependencies]
axum = "0.8"
tempfile = "3.14"
